--- a/index.html
+++ b/index.html
@@ -19,20 +19,35 @@
   </head>
   <body>
    
-    <div class="container-fluid justify-content-center">
+    <div class="container-fluid justify-content-center top-container">
         <div class="container maincontainer">
             <div class="row aling-items-center py-0">
-                <header class="col-12 m-0 p-0 py-5">
+                <header class="col-12 m-0 p-0 p-5">
                     <h1 class="text-white main-title m-4">Lorem Ipsum</h1>
                     <p class="text-white subtitle m-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Repudiandae atque reprehenderit, a ullam adipisci optio.</p>
                     <button class="m-4 bg-warning btn-more py-2 mt-2">MORE</button>
                 </header>
             </div>
             <div class="row">
-                <img src="./media/wave1.svg" alt="Onda" class="w-100 p-0">
+                <img src="./media/wave1.svg" alt="Gray wave" class="w-100 p-0">
             </div>
         </div>
     </div>
+    
+    <section class="container-fluid">
+        <div class="container d-flex justify-content-center p-0 h-100">
+            <div class="row white-wave-section w-100 h-100">
+                <h2 class="little-title text-center py-5">Lorem ipsum <br> dolor sit</h2>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
