--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <section class="container-fluid">
         <div class="container d-flex justify-content-center p-0 h-100">
-            <div class="row white-wave-section w-100 h-100">
+            <div class="row white-wave-section w-100 h-100 p-0">
                 <h2 class="little-title text-center py-5">Lorem ipsum <br> dolor sit</h2>
             </div>
         </div>
