aggiustata onda responsive

--- a/index.html
+++ b/index.html
@@ -19,28 +19,22 @@
   </head>
   <body>
    
-    <div class="container-fluid justify-content-center top-container">
+    <div class="container-fluid justify-content-center top-container px-0">
         <div class="container maincontainer">
             <div class="row aling-items-center py-0">
-                <header class="col-12 m-0 p-0 p-5">
-                    <h1 class="text-white main-title m-4">Lorem Ipsum</h1>
+                <header class="col-12 m-0 header-element">
+                    <h1 class="text-white main-title m-4 fs-1">Lorem Ipsum</h1>
                     <p class="text-white subtitle m-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Repudiandae atque reprehenderit, a ullam adipisci optio.</p>
                     <button class="m-4 bg-warning btn-more py-2 mt-2">MORE</button>
                 </header>
             </div>
-            <div class="row">
-                <img src="./media/wave1.svg" alt="Gray wave" class="w-100 p-0">
+            <div class="row gray-wave-bg">
+                <div class="col-12 white-wave-section">
+                    <h2 class="little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                </div>
             </div>
         </div>
     </div>
-    
-    <section class="container-fluid">
-        <div class="container d-flex justify-content-center p-0 h-100">
-            <div class="row white-wave-section w-100 h-100 p-0">
-                <h2 class="little-title text-center py-5">Lorem ipsum <br> dolor sit</h2>
-            </div>
-        </div>
-    </section>
 
 
 
