header e sezione onda concluse

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             </div>
             <div class="row gray-wave-bg">
                 <div class="col-12 white-wave-section">
-                    <h2 class="little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                    <div class="row justify-content-center px-2">
+                        <h2 class="col-12 little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                        <p class="col-12 col-md-5 col-lg-4 px-5 px-md-0 text-secondary text-center subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate aliquid repellat numquam velit reiciendis. Maxime itaque quis beatae eum alias sint aliquam autem voluptates, et iure incidunt ratione saepe dicta.</p>
+                    </div>
                 </div>
             </div>
         </div>
