--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    
     <div class="container-fluid justify-content-center top-container px-0">
         <div class="container maincontainer">
-            <div class="row aling-items-center py-0">
+            <div class="row aling-items-center py-0 first-row">
                 <header class="col-12 m-0 header-element">
                     <h1 class="text-white main-title m-4 fs-1">Lorem Ipsum</h1>
                     <p class="text-white subtitle m-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Repudiandae atque reprehenderit, a ullam adipisci optio.</p>
@@ -40,6 +40,20 @@
     </div>
 
 
+    <!-- SEZIONE B -->
+
+    <div class="container ">
+        <div class="row aling-items-center py-0" >
+            <section class="col-12 m-6 p-0">
+                <div class="card boxsha" style="border-radius: 30px; width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="verylittle">Lorem ipsum</h5>
+                        <p class="subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 
 
 
