--- a/index.html
+++ b/index.html
@@ -39,22 +39,38 @@
         </div>
     </div>
 
-
     <!-- SEZIONE B -->
 
-    <div class="container ">
-        <div class="row aling-items-center py-0" >
-            <section class="col-12 m-6 p-0">
-                <div class="card boxsha" style="border-radius: 30px; width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="verylittle">Lorem ipsum</h5>
-                        <p class="subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
+    <div class="container-fluid">
+        <div class="container ggggg ">
+            <div class="row aling-items-center py-5" >
+                <section class="col-12 col-md-6 m-6 p-0 d-flex justify-content-center">
+                    <div class="card boxsha">
+                        <div class="card-body">
+                            <h5 class="verylittle">Lorem ipsum</h5>
+                            <p class="subtitle text-secondary mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
     </div>
 
+
+    <!-- TIMELINE -->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <h2 class="col-12 little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                </div>
+                <div class="col-12 col-md-6 mx-5 first-time-element pt-2">
+                    <h3 class="pt-2 verylittle">Lorem</h3>
+                    <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
