--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@500&display=swap" rel="stylesheet">
 
+    <!-- CSS Fontawesome -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- MIO CSS -->
     <link rel="stylesheet" href="./style.css">
 
     <title>Template blue</title>
@@ -39,6 +44,52 @@
         </div>
     </div>
 
+    <!-- SEZIONE A -->
+    <!-- <section class="container-fluid p-5">
+        <div class="row">
+            <div class="col-12 col-lg-3 d-flex justify-content-around">
+                <div class="card" id="card1">
+                    <div class="sfumatura">
+                        <i class="fa-regular fa-user bianco fa-2x"></i>
+                        <h1>ciao</h1>
+                        <hr class="separa">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3 d-flex justify-content-around">
+                <div class="card" id="card2">
+                    <div class="sfumatura">
+                        <i class="fa-regular fa-user bianco fa-2x"></i>
+                        <h1>ciao</h1>
+                        <hr class="separa">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3 d-flex justify-content-around">
+                <div class="card" id="card3">
+                    <div class="sfumatura d-flex align-items-center">
+                        <i class="fa-regular fa-user bianco fa-2x"></i>
+                        <h1>ciao</h1>
+                        <hr class="separa">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3 d-flex justify-content-around">
+                <div class="card" id="card4">
+                    <div class="sfumatura">
+                        <i class="fa-regular fa-user bianco fa-2x"></i>
+                        <h1>ciao</h1>
+                        <hr class="separa">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <!-- SEZIONE B -->
 
     <div class="container-fluid">
@@ -58,7 +109,7 @@
 
 
     <!-- TIMELINE -->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12">
@@ -70,9 +121,39 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+
+    <!-- FOOTER -->
+    <div class="container-fluid">
+        <div class="container footer-container">
+            <footer class="row justify-content-between footer-elements">
+                <div class="col-12 col-md-6 px-5">
+                    <h2 class="verylittle2 text-warning">Lorem ipsum dolor</h2>
+                    <p class="subtitle2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet suscipit praesentium doloribus quidem eum dolor laborum, nam vero, ut sed reprehenderit voluptate, quis quia laudantium sequi dolorum corrupti quibusdam!</p>
+                </div>
+                <div class="col-12 col-md-6 px-5 pb-3">
+                    <div class="row justify-content-between pe-3">
+                        <div class="col-12">
+                            <h2 class="verylittle2 text-warning">Social</h2>
+                        </div>
+                        <div class="col-1">
+                            <i class="fa-brands fa-facebook-f text-white"></i>
+                        </div>
+                        <div class="col-1">
+                            <i class="fa-brands fa-instagram text-white"></i>
+                        </div>
+                        <div class="col-1">
+                            <i class="fa-brands fa-twitter text-white"></i>
+                        </div>
+                        <div class="col-1">
+                            <i class="fa-brands fa-linkedin text-white"></i>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
-
-
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
