timeline quasi completa

--- a/index.html
+++ b/index.html
@@ -109,19 +109,38 @@
 
 
     <!-- TIMELINE -->
-    <!-- <div class="container-fluid">
-        <div class="container">
-            <div class="row justify-content-center">
+    <div class="container-fluid">
+        <div class="container p-0">
+            <div class="row p-0 m-0">
                 <div class="col-12">
-                    <h2 class="col-12 little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                    <h2 class="little-title text-center">Lorem ipsum <br> dolor sit</h2>
                 </div>
-                <div class="col-12 col-md-6 mx-5 first-time-element pt-2">
+                <div class="col-12 mx-md-0 first-time-element pt-2">
                     <h3 class="pt-2 verylittle">Lorem</h3>
                     <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
                 </div>
+                <div class="col-12 mx-md-0 second-time-element pt-2">
+                    <div class="row">
+                        <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                        <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+                    </div>
+                </div>
+                <div class="col-12 mx-md-0 third-time-element pt-2">
+                    <h3 class="pt-2 verylittle">Lorem</h3>
+                    <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+                </div>
+                <div class="col-12 mx-md-0 fourth-time-element pt-2">
+                    <div class="row">
+                        <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                        <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+                    </div>
+                </div>
+                <div class="col-12 d-flex justify-content-center align-items-center timeline-button-container mb-3">
+                    <button class="timeline-button">Subscribe!</button>
+                </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
     <!-- FOOTER -->
