--- a/index.html
+++ b/index.html
@@ -24,154 +24,108 @@
   </head>
   <body>
    
-    <div class="container-fluid justify-content-center top-container px-0">
-        <div class="container maincontainer">
-            <div class="row aling-items-center py-0 first-row">
-                <header class="col-12 m-0 header-element">
-                    <h1 class="text-white main-title m-4 fs-1">Lorem Ipsum</h1>
-                    <p class="text-white subtitle m-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Repudiandae atque reprehenderit, a ullam adipisci optio.</p>
-                    <button class="m-4 bg-warning btn-more py-2 mt-2">MORE</button>
-                </header>
-            </div>
-            <div class="row gray-wave-bg">
-                <div class="col-12 white-wave-section">
-                    <div class="row justify-content-center px-2">
-                        <h2 class="col-12 little-title text-center">Lorem ipsum <br> dolor sit</h2>
-                        <p class="col-12 col-md-5 col-lg-4 px-5 px-md-0 text-secondary text-center subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate aliquid repellat numquam velit reiciendis. Maxime itaque quis beatae eum alias sint aliquam autem voluptates, et iure incidunt ratione saepe dicta.</p>
-                    </div>
+    <div class="container-fluid maincontainer">
+        <div class="row aling-items-center py-0 first-row">
+            <header class="col-12 m-0 header-element">
+                <h1 class="text-white main-title m-4 fs-1">Lorem Ipsum</h1>
+                <p class="text-white subtitle m-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Repudiandae atque reprehenderit, a ullam adipisci optio.</p>
+                <button class="m-4 bg-warning btn-more py-2 mt-2">MORE</button>
+            </header>
+        </div>
+        <div class="row gray-wave-bg">
+            <div class="col-12 white-wave-section">
+                <div class="row justify-content-center px-2">
+                    <h2 class="col-12 little-title text-center">Lorem ipsum <br> dolor sit</h2>
+                    <p class="col-12 col-md-5 col-lg-4 px-5 px-md-0 text-secondary text-center subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate aliquid repellat numquam velit reiciendis. Maxime itaque quis beatae eum alias sint aliquam autem voluptates, et iure incidunt ratione saepe dicta.</p>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- SEZIONE A -->
-    <!-- <section class="container-fluid p-5">
-        <div class="row">
-            <div class="col-12 col-lg-3 d-flex justify-content-around">
-                <div class="card" id="card1">
-                    <div class="sfumatura">
-                        <i class="fa-regular fa-user bianco fa-2x"></i>
-                        <h1>ciao</h1>
-                        <hr class="separa">
 
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-3 d-flex justify-content-around">
-                <div class="card" id="card2">
-                    <div class="sfumatura">
-                        <i class="fa-regular fa-user bianco fa-2x"></i>
-                        <h1>ciao</h1>
-                        <hr class="separa">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-3 d-flex justify-content-around">
-                <div class="card" id="card3">
-                    <div class="sfumatura d-flex align-items-center">
-                        <i class="fa-regular fa-user bianco fa-2x"></i>
-                        <h1>ciao</h1>
-                        <hr class="separa">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-3 d-flex justify-content-around">
-                <div class="card" id="card4">
-                    <div class="sfumatura">
-                        <i class="fa-regular fa-user bianco fa-2x"></i>
-                        <h1>ciao</h1>
-                        <hr class="separa">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- SEZIONE B -->
 
-    <div class="container-fluid">
-        <div class="container ggggg ">
-            <div class="row aling-items-center py-5" >
-                <section class="col-12 col-md-6 m-6 p-0 d-flex justify-content-center">
-                    <div class="card boxsha">
-                        <div class="card-body">
-                            <h5 class="verylittle">Lorem ipsum</h5>
-                            <p class="subtitle text-secondary mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
-                        </div>
+    <div class="container-fluid ggggg ">
+        <div class="row aling-items-center py-5" >
+            <section class="col-12 col-md-6 m-6 p-0 d-flex justify-content-center">
+                <div class="card boxsha">
+                    <div class="card-body">
+                        <h5 class="verylittle">Lorem ipsum</h5>
+                        <p class="subtitle text-secondary mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
         </div>
     </div>
 
 
     <!-- TIMELINE -->
-    <div class="container-fluid">
-        <div class="container p-0">
-            <div class="row p-0 m-0">
-                <div class="col-12">
-                    <h2 class="little-title text-center">Lorem ipsum <br> dolor sit</h2>
-                </div>
-                <div class="col-12 mx-md-0 first-time-element pt-2">
-                    <h3 class="pt-2 verylittle">Lorem</h3>
-                    <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
-                </div>
-                <div class="col-12 mx-md-0 second-time-element pt-2">
-                    <div class="row">
-                        <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
-                        <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
-                    </div>
-                </div>
-                <div class="col-12 mx-md-0 third-time-element pt-2">
-                    <h3 class="pt-2 verylittle">Lorem</h3>
-                    <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
-                </div>
-                <div class="col-12 mx-md-0 fourth-time-element pt-2">
-                    <div class="row">
-                        <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
-                        <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
-                    </div>
-                </div>
-                <div class="col-12 d-flex justify-content-center align-items-center timeline-button-container mb-3">
-                    <button class="timeline-button">Subscribe!</button>
-                </div>
+
+    <div class="container-fluid p-0 timeline-container">
+        <div class="row p-0 m-0">
+            <div class="col-12">
+                <h2 class="little-title text-center">Lorem ipsum <br> dolor sit</h2>
             </div>
+        </div>
+        <div class="row mx-5">
+            <div class="col-12 col-md-6 first-time-element">
+                <h3 class="pt-2 verylittle">Lorem</h3>
+                <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+            </div>
+        </div>
+        <div class="row mx-5 row-end-elements">
+            <div class="col-12 col-md-6 second-time-element">
+                <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+            </div>
+        </div>
+        <div class="row mx-5">
+            <div class="col-12 col-md-6 third-time-element">
+                <h3 class="pt-2 verylittle">Lorem</h3>
+                <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+            </div>
+        </div>
+        <div class="row mx-5 row-end-elements">
+            <div class="col-12 col-md-6 fourth-time-element"> 
+                <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center align-items-center timeline-button-container my-3">
+            <button class="timeline-button">Subscribe!</button>
         </div>
     </div>
 
 
     <!-- FOOTER -->
-    <div class="container-fluid">
-        <div class="container footer-container">
-            <footer class="row justify-content-between footer-elements">
-                <div class="col-12 col-md-6 px-5">
-                    <h2 class="verylittle2 text-warning">Lorem ipsum dolor</h2>
-                    <p class="subtitle2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet suscipit praesentium doloribus quidem eum dolor laborum, nam vero, ut sed reprehenderit voluptate, quis quia laudantium sequi dolorum corrupti quibusdam!</p>
-                </div>
-                <div class="col-12 col-md-6 px-5 pb-3">
-                    <div class="row justify-content-between pe-3">
-                        <div class="col-12">
-                            <h2 class="verylittle2 text-warning">Social</h2>
-                        </div>
-                        <div class="col-1">
-                            <i class="fa-brands fa-facebook-f text-white"></i>
-                        </div>
-                        <div class="col-1">
-                            <i class="fa-brands fa-instagram text-white"></i>
-                        </div>
-                        <div class="col-1">
-                            <i class="fa-brands fa-twitter text-white"></i>
-                        </div>
-                        <div class="col-1">
-                            <i class="fa-brands fa-linkedin text-white"></i>
-                        </div>
+    <div class="container-fluid footer-container">
+        <footer class="row justify-content-between footer-elements">
+            <div class="col-12 col-md-6 px-5">
+                <h2 class="verylittle2 text-warning">Lorem ipsum dolor</h2>
+                <p class="subtitle2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet suscipit praesentium doloribus quidem eum dolor laborum, nam vero, ut sed reprehenderit voluptate, quis quia laudantium sequi dolorum corrupti quibusdam!</p>
+            </div>
+            <div class="col-12 col-md-6 px-5 pb-3">
+                <div class="row justify-content-between pe-3">
+                    <div class="col-12">
+                        <h2 class="verylittle2 text-warning">Social</h2>
+                    </div>
+                    <div class="col-1">
+                        <i class="fa-brands fa-facebook-f text-white"></i>
+                    </div>
+                    <div class="col-1">
+                        <i class="fa-brands fa-instagram text-white"></i>
+                    </div>
+                    <div class="col-1">
+                        <i class="fa-brands fa-twitter text-white"></i>
+                    </div>
+                    <div class="col-1">
+                        <i class="fa-brands fa-linkedin text-white"></i>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </div>
 
 
