creata mia sezione b

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row justify-content-around cards-row mx-3">
             <div class="col-6 col-md-3 mt-5 card-elements">
                 <div class="card ps-2 pt-5 card1">
-                    <i class="fa-light fa-users text-white"></i>
+                    <i class="fa-solid pb-1 fa-users text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
                     <p class="testino text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis aut ipsum amet, iure exercitationem officiis eos aligendi vero.</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
                 <div class="card ps-2 pt-5 card2">
-                    <i class="fa-light fa-location-dot text-white"></i>
+                    <i class="fa-solid pb-1 fa-location-dot text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
                     <p class="testino text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis aut ipsum amet, iure exercitationem officiis eos aligendi vero.</p>
@@ -64,7 +64,7 @@
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
                 <div class="card ps-2 pt-5 card3">
-                    <i class="fa-light fa-life-ring text-white"></i>
+                    <i class="fa-solid pb-1 fa-life-ring text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
                     <p class="testino text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis aut ipsum amet, iure exercitationem officiis eos aligendi vero.</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
                 <div class="card ps-2 pt-5 card4">
-                    <i class="fa-light fa-route text-white"></i>
+                    <i class="fa-solid pb-1 fa-route text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
                     <p class="testino text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis aut ipsum amet, iure exercitationem officiis eos aligendi vero.</p>
@@ -83,18 +83,38 @@
 
     <!-- SEZIONE B -->
 
-    <div class="container-fluid ggggg ">
-        <div class="row aling-items-center py-5" >
-            <section class="col-12 col-md-6 m-6 p-0 d-flex justify-content-center">
-                <div class="card boxsha">
-                    <div class="card-body">
-                        <h5 class="verylittle">Lorem ipsum</h5>
-                        <p class="subtitle text-secondary mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse, quis nihil nemo nesciunt recusandae inventore blanditiis. Ad tenetur laudantium dolore, ipsum recusandae numquam ut nesciunt non at facere quo?</p>
+    <section class="container-fluid my-4">
+        <div class="row justify-content-around">
+            <div class="col-12 col-md-5 mt-5 ms-4 card box-shad">
+                <h5 class="very-little">Lorem ipsum</h5>
+                <p class="subtitle2 text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex pariatur molestiae soluta sunt earum, magnam rerum iure perferendis quae nisi numquam nobis aliquam consectetur explicabo.</p>
+            </div>
+            <div class="col-12 col-md-5 mt-5 main-icons-container">
+                <div class="row icons-row mt-4 mt-md-0">
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-fire text-danger"></i>
+                   </div>
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-seedling text-success"></i>              
+                    </div>
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-bell text-warning"></i>
                     </div>
                 </div>
-            </section>
+                <div class="row icons-row mt-4 mt-md-0">
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-box-open text-primary"></i>
+                    </div>
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-code-branch text-secondary"></i>
+                    </div>
+                    <div class="col-2">
+                        <i class="card icon-box fa-solid fa-shield-halved text-dark"></i>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- TIMELINE -->
@@ -107,25 +127,25 @@
         </div>
         <div class="row mx-5">
             <div class="col-12 first-time-element">
-                <h3 class="pt-2 verylittle">Lorem</h3>
+                <h3 class="pt-2 very-little">Lorem</h3>
                 <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
         <div class="row mx-5 row-end-elements">
             <div class="col-12 second-time-element">
-                <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                <h3 class="col-12 pt-2 very-little text-end">Lorem</h3>
                 <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
         <div class="row mx-5">
             <div class="col-12 third-time-element">
-                <h3 class="pt-2 verylittle">Lorem</h3>
+                <h3 class="pt-2 very-little">Lorem</h3>
                 <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
         <div class="row mx-5 row-end-elements">
             <div class="col-12 fourth-time-element"> 
-                <h3 class="col-12 pt-2 verylittle text-end">Lorem</h3>
+                <h3 class="col-12 pt-2 very-little text-end">Lorem</h3>
                 <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
