--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   </head>
   <body>
    
+    <!-- HEADER + WAVE SECTION -->
+
     <div class="container-fluid maincontainer">
         <div class="row aling-items-center py-0 first-row">
             <header class="col-12 m-0 header-element">
@@ -41,6 +43,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- CARDS -->
      
@@ -81,6 +84,7 @@
         </div>
     </section>
 
+
     <!-- SEZIONE B -->
 
     <section class="container-fluid my-4">
@@ -116,6 +120,36 @@
         </div>
     </section>
 
+
+    <!-- SEZIONE E -->
+    <!-- first part -->
+    <section class="container-fluid">
+        <div class="row justify-content-evenly mt-5 align-items-center">
+            <div class="col-12 col-md-5 ms-4 card box-shad2">
+                <h5 class="very-little">Lorem ipsum</h5>
+                <p class="subtitle2 text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex pariatur molestiae soluta sunt earum, magnam rerum iure perferendis quae nisi numquam nobis aliquam consectetur explicabo.</p>
+            </div>
+            <div class="col-12 col-md-4 mt-5 mt-md-0 d-flex justify-content-center">
+                <div class="border-border">
+                    <img src="https://picsum.photos/150" alt="Immagine tonda casuale" class="round-pic">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- second part -->
+    <section class="container-fluid">
+        <div class="row justify-content-evenly mt-5 align-items-center">
+            <div class="col-12 col-md-4 d-flex justify-content-center">
+                <div class="border-border">
+                    <img src="https://picsum.photos/150" alt="Immagine tonda casuale" class="round-pic">
+                </div>
+            </div>
+            <div class="col-12 col-md-5 mt-5 mt-md-0 me-4 card box-shad2">
+                <h5 class="very-little">Lorem ipsum</h5>
+                <p class="subtitle2 text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex pariatur molestiae soluta sunt earum, magnam rerum iure perferendis quae nisi numquam nobis aliquam consectetur explicabo.</p>
+            </div>
+        </div>
+    </section>
 
     <!-- TIMELINE -->
 
